Update documentation with links, tests, examples.